# homelab

./: .envrc  .gitignore  Makefile  apply.py  config.yaml  devenv.nix  mise.toml  pyproject.toml  run.py
.dvc/: config
data/: test.xml.dvc
src/homelab/: __init__.py  __main__.py  fonts.py  kbd.py  logger.py  permissions.py  symlinks.py
src/homelab/config/: __init__.py  fonts.py  symlink.py
src/homelab/data/: config.py
